# real-estate-control

./: .dockerignore  .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/config/: containers.json
.github/config/dev/: containers.json
.github/config/qa/: containers.json
.github/workflows/: cd-prod.yml  cd-qa.yml  ci-dev.yml  ci-qa.yml  ci.yml  deploy-app-manual.yml  security-cloud-audit.yml  security-post-qa.yml  trigger-build-and-push.yml  trigger-deploy.yml
docs/planning/: ADR.md  DEBUG_LOG.md  REFERENCE_DEPLOYS.md  board_jira.md  cards_epico.csv  real-estate-control-prd.md  roadmap.md  roadmap_equilibrado.md  solution-brief.yaml  user-status.md
docs/planning/SMOKE_REPORTS/: verify-as1i-20260717T003736Z.md  verify-as1i-20260717T105922Z.md  verify-as1i-20260717T115000Z.md  verify-as1i-20260717T115007Z.md  verify-as1i-20260717T115220Z.md  verify-as1i-20260717T115238Z.md  (+7 more)
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  types.ts
hub/: solution.manifest.yaml
openapi/: hub-fragment.yaml
skills/bootstrap-deploy/: SKILL.md
skills/debug-deploy/: SKILL.md
skills/security-pipeline/: SKILL.md
skills/sync-esteira/: SKILL.md
src/: main.py
src/routers/: contracts.py  metrics.py  properties.py
src/schemas/: contracts.py  metrics.py  properties.py
src/services/: contracts_service.py  metrics_service.py  properties_service.py
tests/: test_health.py
tests/unit/: test_contracts.py  test_health.py  test_metrics.py  test_properties.py
(+11 files in other folders)
